--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,28 +4,32 @@ version = "0.1.0"
 description = "NASA Fornax Cutouts - Pluggable backend for Async FITS cutouts with FastAPI + Celery using the IVOA UWS standard"
 readme = "README.md"
 license = { text = "BSD-3-Clause" }
-authors = [
-    { name = "Daniel Sarmiento", email = "dsarmiento@stsci.edu" }
-]
+authors = [{ name = "Daniel Sarmiento", email = "dsarmiento@stsci.edu" }]
 requires-python = ">=3.10,<3.14"
 dependencies = [
     "astrocut>=1.1.0",
     "celery>=5.5.0",
     "fastapi>=0.115.0",
+    "fastapi-utils>=0.8.0",
     "pydantic>=2.6,<3",
     "redis>=6.2",
     "vo-models>=0.5.0",
 ]
 
 [dependency-groups]
-dev = ["pre-commit>=4.3.0", "ruff>=0.14.1", "uvicorn[standard]>=0.37.0"]
+dev = [
+    "isort>=7.0.0",
+    "pre-commit>=4.3.0",
+    "ruff>=0.14.1",
+    "uvicorn[standard]>=0.37.0",
+]
 
 [project.scripts]
 fornax-cutouts = "fornax_cutouts.app.__main__:main"
 
-[build-system]
-requires = ["uv_build >= 0.9.2, <0.10.0"]
-build-backend = "uv_build"
+# [build-system]
+# requires = ["uv_build >= 0.9.2, <0.10.0"]
+# build-backend = "uv_build"
 
 [tool.ruff]
 indent-width = 4
