--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "celery>=5.5.0",
     "fastapi>=0.115.0",
     "fastapi-utils>=0.8.0",
+    "httpx>=0.28.1",
     "pydantic>=2.6,<3",
     "redis>=6.2",
     "vo-models>=0.5.0",
