--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,12 @@ requires-python = ">=3.10,<3.14"
 dependencies = [
     "astrocut>=1.1.0",
     "celery>=5.5.0",
-    "fastapi>=0.115.0",
+    "fastapi[standard]>=0.115.0",
     "fastapi-utils>=0.8.0",
     "httpx>=0.28.1",
     "pydantic>=2.6,<3",
     "redis>=6.2",
+    "typing-inspect>=0.9.0",
     "vo-models>=0.5.0",
 ]
 
@@ -26,11 +27,14 @@ dev = [
 ]
 
 [project.scripts]
-fornax-cutouts = "fornax_cutouts.app.__main__:main"
+fornax-cutouts = "fornax_cutouts.cli:main"
 
-# [build-system]
-# requires = ["uv_build >= 0.9.2, <0.10.0"]
-# build-backend = "uv_build"
+[build-system]
+requires = ["uv_build >= 0.9.2, <0.10.0"]
+build-backend = "uv_build"
+
+[tool.uv.build-backend]
+module-root = "."
 
 [tool.ruff]
 indent-width = 4
