--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,11 @@ dependencies = [
     "fastapi-utils>=0.8.0",
     "httpx>=0.28.1",
     "pydantic>=2.6,<3",
+    "pydantic-settings>=2.11.0",
     "redis>=6.2",
     "typing-inspect>=0.9.0",
     "vo-models>=0.5.0",
+    "uvicorn[standard]>=0.37.0",
 ]
 
 [dependency-groups]
@@ -23,7 +25,6 @@ dev = [
     "isort>=7.0.0",
     "pre-commit>=4.3.0",
     "ruff>=0.14.1",
-    "uvicorn[standard]>=0.37.0",
 ]
 
 [project.scripts]
