--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ requires-python = ">=3.10,<3.14"
 dependencies = [
     "astrocut>=1.1.0",
     "celery>=5.5.0",
+    "click>=8.3.0",
     "fastapi[standard]>=0.115.0",
     "fastapi-utils>=0.8.0",
     "httpx>=0.28.1",
@@ -16,8 +17,8 @@ dependencies = [
     "pydantic-settings>=2.11.0",
     "redis>=6.2",
     "typing-inspect>=0.9.0",
-    "vo-models>=0.5.0",
     "uvicorn[standard]>=0.37.0",
+    "vo-models>=0.5.0",
 ]
 
 [dependency-groups]
