--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,12 +19,16 @@ dependencies = [
     "typing-inspect>=0.9.0",
     "uvicorn[standard]>=0.37.0",
     "vo-models>=0.5.0",
+    "duckdb>=1.4.1",
+    "pyarrow>=20.0.0",
+    "pandas>=2.3.3",
 ]
 
 [dependency-groups]
 dev = [
     "isort>=7.0.0",
     "pre-commit>=4.3.0",
+    "pyarrow-stubs>=20.0.0.20250928",
     "ruff>=0.14.1",
 ]
 
